2010-08-18  David Reveman  <davidr@novell.com>

	* uielement.h: Add COMPOSITE_MASK.

	* uielement.cpp (ComputeComposite): Improve code so that
	optimizations can be added.

	* effect.h:
	* effect.cpp: Add type and opacity properties to TransformEffect
	class.

	* uielement.cpp:
	* effect.h:
	* effect.cpp: Rename ProjectionEffect to TransformEffect.

	* uielement.cpp: Implement COMPOSITE_CLIP.

	* dirty.cpp (ProcessDownDirtyElements): Use AddDirtyElement.

	* uielement.h:
	* uielement.cpp: Add COMPOSITE_* flags and use these in Pre/Post-
	Render functions to determine necessary intermediate buffer
	stages.

2010-08-17  David Reveman  <davidr@novell.com>

	* effect.h:
	* effect.cpp: Remove static GetProjectionEffect method.

	* uielement.h:
	* uielement.cpp: Add ComputeComposite method.

	* dirty.h:
	* dirty.cpp: Add DirtyComposite flag.

2010-08-15  David Reveman  <davidr@novell.com>

	* effect.h:
	* effect.cpp: Move perspective trasform fragment shader into
	ProjectionEffect class.

2010-08-12  David Reveman  <davidr@novell.com>

	* effect.h: Remove unused user data keys.

	* effect.cpp:
	* effect.h:
	* projection.cpp:
	* projection.h: Add missing const modifier.

2010-08-11  David Reveman  <davidr@novell.com>

	* uielement.cpp (PostRender): Apply correct transform
	to opacity mask.

	* effect.cpp (Composite): Use UpdateShaderConstant to set
	DdxUvDdyUv constant.

	* effect.cpp (GetShaderConstantBuffer): Fix size of constant
	buffer. Each constant requires 4 * sizeof (float) stoarge space.

2010-08-09  David Reveman  <davidr@novell.com>

	* uielement.h:
	* uielement.cpp: Add scale_xform member which is used to
	render the element at a non natural resolution when bitmap
	caching is used.

	* runtime.h:
	* runtime.cpp: Add ContextNode constructor that takes
	a transformation matrix. The matrix is used as the initial
	transform for the cairo context.

	* bitmapcache.h:
	* bitmapcache.cpp: Add CacheMode::GetTransform function.
